# python-project-50

./:  .codeclimate.yml  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml  pytest.ini  setup.cfg
.github/workflows/: check.yml  checks.yml  test_coverage.yml
_tests/: test_1.py  test_2.py  test__format_json.py  test_all.py  test_flat.py  test_plain.py  test_recurs.py  test_utility.py  test_yaml.py
_tests/fixtures/: file_1.json  file_yml1.yml  format_json.json  rezult_f1_f2.yml
coverage/: codeclimate.json
gendiff/: build_diff.py  cli.py  data_output_format.py  formatting.py  generate_diff.py  recurs_gendiff.py  utility.py
gendiff/formaters/: format_json.py  format_plain.py  stylish.py
gendiff/parse/: data_converter.py  data_parse.py  extension.py  file_reader.py
gendiff/scripts/: formatting.py  gendiff.py  generate_diff.py  generate_diff_file.py  start.py  utility.py
hexlet_code/formaters/: format_json.py  format_plain.py  stylish.py
hexlet_code/scripts/: formatting.py  gendiff.py  generate_diff.py  recurs_gendiff.py  start.py
hexlet_code/starters/: start.py
hexlet_python_package/scripts/: gendiff.py
myenv/: pyvenv.cfg
tests/: test_all.py  test_utility.py
tests/fixtures/: format_json.json
tests/fixtures/diff_responses/: response_json_flat.txt  response_json_nested.txt
