[tool.poetry]
name = "python-project-50"
version = "0.1.0"
description = "Второй учебный проект в курсе Хекслета. Вычисляет различия между двумя конфигурационными файлами."
authors = ["lilpeep3 <you@example.com>"]
readme = "README.md"
packages = [
  {include = "hexlet_code"},]
#{include = "gendiff"}]

[tool.poetry.dependencies]
python = "3.9.10"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "hexlet_code.starters.start:main"
