[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Второй учебный проект в курсе Хекслета. Вычисляет различия между двумя конфигурационными файлами."
authors = ["lilpeep8 <john@example.com>"]
readme = "README.md"
packages = [
  {include = "gendiff"}]


[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^6.0"
pytest = "^7.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
flake8 = "^6.0.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.start:main"
